Fix formatting and alignment issues in HTML and CSS

--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,9 @@ body {
     /* 1rem = 10px*/
     font-family: 'Quicksand', sans-serif;
     background-color: var(--fondo);
+    margin: 0;
+    padding: 0;
+
 }
 
 h1 {
@@ -187,8 +190,10 @@ h3 {
     padding: 15px;
 }
 
-.pie {
-    position: fixed;
+.pie{
+    max-width: 100%;
+    max-height: 100%;
+    position:static;
     bottom: 0;
     padding: 15px;
 }
